configure.ac: stick auxiliary compile files into build-aux
Signed-off-by: Marty E. Plummer <hanetzer@startmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,7 @@ BZIP2_LT_CURRENT=1
 BZIP2_LT_REVISION=6
 BZIP2_LT_AGE=0
 AC_CONFIG_SRCDIR([bzlib.h])
+AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_MACRO_DIR([m4])
 
 AM_INIT_AUTOMAKE([1.15 foreign subdir-objects -Wall])
